# Numerik2

./: .gitignore  README.md  konvergenz.py
code/: .gitignore  CMakeLists.txt  PreConditioner.h  a.exe.stackdump  cg-dense-vs-sparse.cpp  cg-kond-res.cpp  cg-sparsity-sparse.cpp  densematrix.h  eigen.cpp  konvergenz.py  main.cpp  precond-vs-cg-complexity.cpp  precond-vs-cg-ndiag.cpp  precond-vs-cg.cpp  size.h  vector.h
code/.idea.bck/: workspace.xml
code/Linag/: densematrix.h  fraction.h  size.h  sparsematrix.h  vector.h
code/RandomMatrix/: RandomMatrix.cbp  RandomMatrix.cpp  RandomMatrix.hpp  Vector.cpp  Vector.hpp
code/aufgabe1/: CMakeLists.txt  densematrix.cpp  densematrix.h  linag.cpp  linag.h  main.cpp  main.cpp.orig  size.cpp  sparsematrix.cpp  sparsematrix.cpp.cpp  sparsematrix.h  sparsematrix.hpp  sparsematrix.hpp.test  vector.cpp  vector.h
latex/: aufgabe1 2.synctex(busy)  aufgabe1.lol  aufgabe1.lol 2.lol  aufgabe1.lol 3.lol  aufgabe1.lol~33fd844845584ec2cb8abd69e0cb11de51951867_0  aufgabe1.tex  aufgabe2.tex  refs.bib
plots/: .Rhistory  cg-dense-vs-sparse  cg-dense-vs-sparse.R  cg-kond-res  cg-kond-res.R  cg-sparsity-sparse  cg-sparsity-sparse-pre-aenderung  cg-sparsity-sparse-tmp  cg-sparsity-sparse.R  eigen  eigen-rafael.R  eigen.R  precond-vs-cg  precond-vs-cg-complexity  precond-vs-cg-complexity.R  precond-vs-cg-it  precond-vs-cg-it.R  precond-vs-cg-ndiag  precond-vs-cg-ndiag.R  precond-vs-cg-rel  precond-vs-cg.R
